classDiagram
    class TransactionInvoiceController {
        +CreateBatchAsync(dto) Task~BatchResultDto~
        +GetInvoiceById(id) Task~TransactionInvoiceResponse~
    }
    class ITransactionInvoiceService {
        +CreateBatchAsync(dto) Task~BatchResultDto~
        +CreateAsync(request) Task~TransactionInvoiceResponse~
    }
    class TransactionInvoiceService {
        +CreateBatchAsync(dto) Task~BatchResultDto~
        +CreateAsync(request) Task~TransactionInvoiceResponse~
    }
    class IAccountCategoryRepository {
        +GetByIdAsync(id) Task~AccountCategory~
    }
    class IUnitOfWork {
        +SaveChangesAsync() Task~int~
        +BeginTransactionAsync() Task
    }
    class AccountCategory {
        +AccountCategoryId string
        +Balance decimal
        +Status string
    }
    class TransactionInvoice {
        +InvoiceId string
        +BatchId string
        +AccountCategoryId string
        +Amount decimal
        +Status string
    }
    TransactionInvoiceController --> ITransactionInvoiceService : depends on
    ITransactionInvoiceService <|.. TransactionInvoiceService : implements
    TransactionInvoiceService --> IAccountCategoryRepository : depends on
    TransactionInvoiceService --> IUnitOfWork : depends on
    IAccountCategoryRepository ..> AccountCategory : returns
    TransactionInvoiceService ..> TransactionInvoice : creates
